--- a/css/estilo.css
+++ b/css/estilo.css
@@ -68,7 +68,7 @@ body > #contenedor {height: auto; min-height: 100%;}
 
 .contenido{width:700px; float:left;}
 	.contenido > div{background-color: #89acc1; border-radius:7px; margin-bottom:30px; background-image: url("../img/stripe.png"); padding:10px;	}
-		.contenido > div > div {background-image:url("../img/stripeOpacity.png"); border-radius:7px; padding:7px;}	
+		.contenido > div > div {/*background-image:url("../img/stripeOpacity.png");*/ background-color: rgba(220,220,220,0.9); border-radius:7px; padding:7px;}	
 	
 	.contenido hr {border: solid grey; border-width: 1px 0 0; margin: 3px 0 8px 0; height: 0;}
 	.contenido a:hover {color: darkslateblue;}
@@ -172,7 +172,7 @@ body > #contenedor {height: auto; min-height: 100%;}
 .sinLateral {width:700px; margin-left: 110px; margin-top: 20px; font-size: 15px; vertical-align:top;}
 .sinLateral {font-weight: normal; }
 	.sinLateral > div{background-color: #89acc1; border-radius:7px; margin-bottom:30px; background-image: url("../img/stripe.png"); padding:10px; box-shadow: 0px 0px 14px #000000;}
-	.sinLateral fieldset, .sinLateral > div > div {background-image:url("../img/stripeOpacity.png"); border:solid 2px #004F81; border-radius:7px; padding:7px; }
+	.sinLateral fieldset, .sinLateral > div > div {/*background-image:url("../img/stripeOpacity.png");*/ background-color: rgba(220,220,220,0.9); border:solid 2px #004F81; border-radius:7px; padding:7px; }
 
 /* - Formulario - */
 
